@@ -10,6 +10,7 @@
   - Keybinding =f= to open =xref= definition in the same window.
   - Enable =recentf-mode=. Call with ~M-x recent-open*~.
   - Keybinding =C-c t= to start terminal emulator.
+  - Keybinding =C-c b w= to toggle =whitespace-mode=.
 
 *** Changed:
   - Improve =rust-mode= usability.
